# generic_trait_alias

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: generic.rs  lexer.rs  lib.rs  parser.rs
tests/: test_trait.rs
